# amazon-q-developer-cli

./: .gitignore  .typos.toml  Cargo.toml  async_client_plan.md  memory_bank_client_refactoring_plan.md
crates/chat-cli/: Cargo.toml
crates/chat-cli/src/cli/chat/: command.rs  mod.rs  prompt.rs  tool_manager.rs
crates/chat-cli/src/cli/chat/tools/: knowledge.rs  mod.rs  tool_index.json
crates/mcp_client/src/: client.rs
crates/memory_bank_client/: Cargo.toml  README.md
crates/memory_bank_client/src/: client.rs  config.rs  embedding.rs  embedding_candle.rs  embedding_onnx.rs  error.rs  lib.rs  processing.rs  types.rs
crates/memory_bank_client/src/client/: implementation.rs  memory_bank_client.rs  mod.rs
crates/memory_bank_client/src/embedding/: candle.rs  candle_models.rs  mod.rs  onnx.rs  onnx_models.rs  trait_def.rs
crates/memory_bank_client/src/processing/: file_processor.rs  mod.rs  text_chunker.rs
crates/memory_bank_client/tests/: test_add_context_from_path.rs  test_file_processor.rs  test_memory_bank_client.rs  test_vector_index.rs
crates/q_chat/: Cargo.toml
crates/q_chat/src/: command.rs  conversation_state.rs  lib.rs  prompt.rs  tool_manager.rs
crates/q_chat/src/tools/: memory.rs  mod.rs  tool_index.json
crates/semantic_search_client/: Cargo.toml  README.md
crates/semantic_search_client/src/client/: embedder_factory.rs  implementation.rs
crates/semantic_search_client/src/embedding/: candle.rs
crates/semantic_search_client/tests/: test_add_context_from_path.rs  test_semantic_context.rs  test_semantic_search_client.rs  test_text_chunker.rs
development-scripts/: README.md  build_minimal.py  build_minimal_mac.py
