[package]
name = "memory_bank_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { version = "1.4", features = ["v4", "serde"] }
dirs = "5.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17.0"

# Vector search library
hnsw_rs = "0.3.1"

# Candle dependencies for text embeddings (used on all platforms)
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.15.0"
hf-hub = "0.3.2"
anyhow = "1.0"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
# Fastembed dependencies - only for macOS and Windows
fastembed = { version = "4.8.0", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
