[package]
name = "memory_bank_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { version = "1.4", features = ["v4", "serde"] }
dirs = "5.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17.0"
rayon = "1.8.0"
tempfile = "3.8.0"

# Vector search library
hnsw_rs = "0.3.1"

# Candle dependencies for text embeddings (used on all platforms)
candle-core = { version = "0.9.1", features = [] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.21.1"
hf-hub = "0.4.2"
anyhow = "1.0"

# Conditionally enable Metal on macOS
[target.'cfg(target_os = "macos")'.dependencies.candle-core]
version = "0.9.1"
features = ["metal"]

# Conditionally enable CUDA on Linux and Windows
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies.candle-core]
version = "0.9.1"
features = []

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
# Fastembed dependencies - only for macOS and Windows
fastembed = { version = "4.8.0", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
